# image-ranking-tool

./: Cargo.toml  Dioxus.toml
assets/: main.css
src/: lib.rs  main.rs  ranking_system.rs  template.html
src/components/: basic.rs
src/ranking_system/: item.rs  pair.rs  ranking_service.rs  ranking_session.rs  strategies.rs  strategy.rs  winner.rs
src/ranking_system/strategies/: each_against_random_n_strategy.rs  each_with_each_strategy.rs
