[package]
name = "image-ranker"
version = "0.1.0"
authors = ["Eugene 'Riketta' Chugaev <riketta@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
async-recursion = "1.1.1"
chrono = { version = "0.4.38", features = ["serde"] }
dioxus = { version = "0.5", features = ["desktop"] }

# Debug
dioxus-logger = "0.5.1"
futures = "0.3.31"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
anyhow = "*"
